[package]
name = "core"
version = "0.1.0"
authors = ["Gerald <me@jacobford.co.uk>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
  'Text',
  'Event'
]

[profile.release]
opt-level = "s"
