[package]
name = "output"
version = "0.1.0"
authors = ["Gerald <me@jacobford.co.uk>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = { version = "0.1.1", optional = true }
core = { path = "../core" }

[profile.release]
opt-level = "s"
